<resources>
    <string name="app_name">Ribbit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="email_field">Email</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="no_messages_text">No new messages</string>
    <string name="no_friends_text">No friends available</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">Oops!</string>
    <string name="error_message">There was an error, please try again</string>
    <string name="camera_label">Camera</string>
    <string name="error_external_storage">Problem accessing device storage</string>
    <string name="general_error_message">Sorry, there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_locating_file">There was a problem with selected file</string>
    <string name="file_size_too_large">The selected file is too large! Select a new file.</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_choose_recipients">ChooseRecipients</string>
    <string name="no_recipients_text">No friends available</string>
    <string name="action_send_label">Send</string>
    <string name="error_selecting_file_message">There was an error with the file selected. Please select a different file</string>
    <string name="error_selecting_file_title">We\'re Sorry</string>
    <string name="success_message">Message sent</string>
    <string name="error_sending_message">There was an error sending your message. Please try again</string>
    <string name="title_activity_view_image">Ribbit</string>
</resources>
